fixed dark mode in mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -463,9 +463,7 @@ b, strong {
     padding-bottom: 4rem;
   }
 
-  .color-mode {
-    display: none;
-  }
+
 
   .about-image {
     margin-top: 4em;
